2016-02-15:
Updated the HUD/Hunger mod.

2016-02-11:
Updated mobs again.
Fixed plantlife modpack so the berry bushes actually spawn in world, I think it was a humidity problem.
Removed the pathogen mod, as I heard it caused some crashes and it currently wasn't doing anything.

2016-02-03:
Updated mobs to latest version from TenPlus1

2016-01-17:
Fixed a bug with Unified Inventory that could crash the game.
Worked on adding the textures for the meats.
Discovered that my groups aren't working, can't figure out why either.

2016-01-13:
Tweaked hunger and thirst speed.
Added Goat mob.
Changed around drops for animals.
Added some new foods to food mod.
A few tweaks to plants modpack so berry bushes should start appearing in game again.

2015-12-10:
Updated traps to work correctly for freeing and butchering animals.
Tweaked some grouping for the traps so more baits will bring in game.

2015-12-02:
Added the Bees mod, fixed the leaves to be in the kindling group again.

2015-10-7:
Added in a few mobs, have yet to tweak the spawn rates to make them much rarer. Also want to make them run away from the player, though I don't seem to notice an option for that.

2015-09-22:
Added the ambience mod, to create more immersive gameplay.

2015-09-10:
Major updates on traps. Currently you can only use raw meat to bait them. all buttons should be working in the formspecs.

2015-09-09:
Started work on ABMs for traps and did some minor coding changes in the nodes and formspecs

2015-09-07:
Updated Goblins Mod again.
Added Pathv6 as a new mod.

2015-09-04:
Updated Goblins Mod again.
Snare now has several states with different formspecs for each.

2015-09-02:
Updated More_fire to fix a few missing textures.
Tweaked around grass growth and spread ABMs. Grass will now just grow on soils that have full grass texture on top, which should help with the disparity in looks.